--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="test.map.mvvmgogo">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:networkSecurityConfig="@xml/network_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVMGOGO">
+        <activity
+            android:name=".Retrofit_Mvvm_Package.Retrofit_Mvvm_MainActivity"
+            android:exported="false" />
         <activity
             android:name=".mvvm_RecyclerView_Package.Mvvm_RecyclerView_MainActivity"
             android:exported="false" />
