[MVVM패턴으로 API데이터를 recyclerview 구현하기]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVMGOGO">
         <activity
-            android:name=".Retrofit_Mvvm_Package.Retrofit_Mvvm_MainActivity"
+            android:name=".retrofit_MvvmPackage.Retrofit_Mvvm_MainActivity"
             android:exported="false" />
         <activity
             android:name=".mvvm_RecyclerView_Package.Mvvm_RecyclerView_MainActivity"
