--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="test.map.mvvmgogo">
+    package="test.map.mvvmgogo" >
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_config"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MVVMGOGO">
+        android:theme="@style/Theme.MVVMGOGO" >
+        <activity
+            android:name=".double_recyclerview_Package.MainFragment"
+            android:exported="false" />
+        <activity
+            android:name=".double_recyclerview_Package.Double_RecyclerViewMainActivity"
+            android:exported="false" />
         <activity
             android:name=".retrofit_MvvmPackage.Retrofit_Mvvm_MainActivity"
             android:exported="false" />
@@ -32,7 +38,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
