[다중 리사이클러뷰 공부]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="test.map.mvvmgogo" >
+    package="test.map.mvvmgogo">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,7 +11,10 @@
         android:networkSecurityConfig="@xml/network_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MVVMGOGO" >
+        android:theme="@style/Theme.MVVMGOGO">
+        <activity
+            android:name=".multiRecyclerView_Package.MultiViewActivity"
+            android:exported="false" />
         <activity
             android:name=".double_recyclerview_Package.MainFragment"
             android:exported="false" />
@@ -38,7 +41,7 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
