[Koin 의존성 주입 공부]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVMGOGO">
         <activity
+            android:name=".koin_Package.KoinMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".multiRecyclerView_Package.MultiViewActivity"
             android:exported="false" />
         <activity
