--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation "org.koin:koin-android:2.1.1"
+    implementation "org.koin:koin-androidx-viewmodel:2.1.1"
 
 }
